does changes in navbar

--- a/index.html
+++ b/index.html
@@ -178,17 +178,17 @@
       <!-- navbar items -->
       <ul class="ms-auto" style="padding-top: 1px;">
 
-        <li class="nav-item"><a href="index.html" onclick="return false;"><i class="fas fa-home"></i>HOME</a></li>
-        <li class="nav-item"><a href="about.html"><i class="fas fa-book"></i>ABOUT</a></li>
-        <li class="nav-item"><a href="./public/donate-book.html"><i class="fas fa-book"></i>DONATE BOOKS</a></li>
-        <li class="nav-item"><a href="resource.html"><i class="fas fa-external-link-alt"></i>RESOURCES</a></li>
-        <li class="nav-item"><a href="./blogs.html"><i class="fas fa-sign-in-alt"></i>BLOGS</a></li>
+        <li class="nav-item"><a href="index.html" onclick="return false;"><i class="fas fa-home"></i>Home</a></li>
+        <li class="nav-item"><a href="about.html"><i class="fas fa-book"></i>About</a></li>
+        <li class="nav-item"><a href="./public/donate-book.html"><i class="fas fa-book"></i>Donate Books</a></li>
+        <li class="nav-item"><a href="resource.html"><i class="fas fa-external-link-alt"></i>Resources</a></li>
+        <li class="nav-item"><a href="./blogs.html"><i class="fas fa-sign-in-alt"></i>Blogs</a></li>
         <!-- Added Quiz page  -->
-        <li class="nav-item"><a href="Quiz/pages/quizhome.html"><i class="fas fa-gamepad"></i>PLAY QUIZ</a></li>
-        <li class="nav-item"><a href="./public/contact us .html"><i class="fas fa-address-book"></i>CONTACT US</a></li>
+        <li class="nav-item"><a href="Quiz/pages/quizhome.html"><i class="fas fa-gamepad"></i>Play Quiz</a></li>
+        <li class="nav-item"><a href="./public/contact us .html"><i class="fas fa-address-book"></i>Contact Us</a></li>
         <li class="nav-item"><a href="#faq" ><i class="fas fa-sign-in-alt"></i>FAQs</a></li>
         <li class="nav-item"><a href="contributors.html"><i style="font-size: 21px;"
-              class="fas fa-user-friends"></i>CONTRIBUTORS</a></li>
+              class="fas fa-user-friends"></i>Contributors</a></li>
 
       </ul>
     </div>
@@ -346,7 +346,7 @@
               &#128269;
             </button>  -->
 
-            <h1 class="search-heading">Read Books</h2>
+            <h2 class="search-heading">Read Books</h2>
             <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.."
             
               title="Type in a name">
