--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
       <!-- navbar items -->
       <ul class="ms-auto" style="padding-top: 1px;">
 
-        <li class="nav-item"><a href="index.html" onclick="return false;"><i class="fas fa-home"></i>HOME</a></li>
+        <li class="nav-item"><a href="./index.html"><i class="fas fa-home"></i>HOME</a></li>
         <li class="nav-item"><a href="about.html"><i class="fas fa-book"></i>ABOUT</a></li>
         <li class="nav-item"><a href="./public/donate-book.html"><i class="fas fa-book"></i>DONATE BOOKS</a></li>
         <li class="nav-item"><a href="resource.html"><i class="fas fa-external-link-alt"></i>RESOURCES</a></li>
