improved fond and styling

--- a/index.html
+++ b/index.html
@@ -52,6 +52,18 @@
     @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Nunito&family=Source+Sans+Pro&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+    .new-nav {
+      font-family: 'Poppins', sans-serif; /* Use a more compatible font */
+      font-size: 16px; /* Adjust font size as needed */
+    }
+    .new-nav .nav-item a {
+      color: #333; /* Set a compatible color */
+      text-decoration: none; /* Remove underline */
+      padding: 10px 15px; /* Add padding for better spacing */
+    }
+    .new-nav .nav-item a:hover {
+      color: #007bff; /* Change color on hover */
+    }
   </style>
   <link rel="stylesheet" href="./assets/css/style.css" />
   
